--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["hariadiarief <adi.arief77@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "^3.0.0"
+Flask-HTTPAuth = "^4.8.0"
+Werkzeug = "^3.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
