--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 Flask = "^3.0.0"
 Flask-HTTPAuth = "^4.8.0"
 Werkzeug = "^3.0.1"
+PyJWT = "^2.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
